@@ -10,104 +10,119 @@ import net.emc.emce.object.ServerData;
 import net.minecraft.client.MinecraftClient;
 import net.minecraft.client.network.ClientPlayerEntity;
 
-import java.net.HttpURLConnection;
-import java.net.URL;
-import java.util.Scanner;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.nio.charset.StandardCharsets;
+import java.util.concurrent.CompletableFuture;
 
 public class EarthMCAPI {
-    public static JsonArray getTownless() {
-        try {
-            return (JsonArray) new JsonParser().parse(getURL("http://earthmc-api.herokuapp.com/townlessplayers"));
-        } catch (APIException e) {
-            MsgUtils.sendDebugMessage(e.getMessage(), e);
-            return new JsonArray();
-        }
+    private static final HttpClient client = HttpClient.newHttpClient();
+
+    public static CompletableFuture<JsonArray> getTownless() {
+        return CompletableFuture.supplyAsync(() -> {
+            try {
+                return (JsonArray) new JsonParser().parse(getURL("http://earthmc-api.herokuapp.com/townlessplayers"));
+            } catch (APIException e) {
+                MsgUtils.sendDebugMessage(e.getMessage(), e);
+                return new JsonArray();
+            }
+        });
     }
 
-    public static JsonArray getNearby(int xBlocks, int zBlocks) {
-        try {
-            MinecraftClient client = MinecraftClient.getInstance();
-            ClientPlayerEntity player = client.player;
-            
-            if (player != null) {
-                if (!player.getEntityWorld().getDimension().isBedWorking())
-                    return new JsonArray();
-                
-                JsonArray array = (JsonArray) new JsonParser().parse(getURL("http://earthmc-api.herokuapp.com/nearby/" +
-                        (int) player.getX() + "/" +
-                        (int) player.getZ() + "/" +
-                        xBlocks + "/" + zBlocks));
-
-                for (int i = 0; i < array.size(); i++) {
-                    JsonObject currentObj = (JsonObject) array.get(i);
-                    if (currentObj.get("name").getAsString().equals(client.player.getName().asString())) array.remove(i);
-                }
-                return array;
-            } else
-                return EarthMCEssentials.getNearbyPlayers();
-        }
-        catch (APIException e) {
-            MsgUtils.sendDebugMessage(e.getMessage(), e);
-            return EarthMCEssentials.getNearbyPlayers();
-        }        
+    public static CompletableFuture<JsonArray> getNearby() {
+        return getNearby(EarthMCEssentials.instance().getConfig().nearby.xBlocks, EarthMCEssentials.instance().getConfig().nearby.zBlocks);
     }
 
-    public static Resident getResident(String residentName) {
-        try {
-            return new Resident((JsonObject) new JsonParser().parse(getURL("http://earthmc-api.herokuapp.com/residents/" + residentName)));
-        } catch (APIException e) {
-            MsgUtils.sendDebugMessage(e.getMessage(), e);
-            return new Resident(residentName);
-        }
+    public static CompletableFuture<JsonArray> getNearby(int xBlocks, int zBlocks) {
+        return CompletableFuture.supplyAsync(() -> {
+            try {
+                MinecraftClient client = MinecraftClient.getInstance();
+                ClientPlayerEntity player = client.player;
+
+                if (player != null) {
+                    if (!player.getEntityWorld().getDimension().isBedWorking())
+                        return new JsonArray();
+
+                    JsonArray array = (JsonArray) new JsonParser().parse(getURL("http://earthmc-api.herokuapp.com/nearby/" +
+                            (int) player.getX() + "/" +
+                            (int) player.getZ() + "/" +
+                            xBlocks + "/" + zBlocks));
+
+                    for (int i = 0; i < array.size(); i++) {
+                        JsonObject currentObj = (JsonObject) array.get(i);
+                        if (currentObj.get("name").getAsString().equals(client.player.getName().asString()))
+                            array.remove(i);
+                    }
+                    return array;
+                } else
+                    return EarthMCEssentials.instance().getNearbyPlayers();
+            } catch (APIException e) {
+                MsgUtils.sendDebugMessage(e.getMessage(), e);
+                return EarthMCEssentials.instance().getNearbyPlayers();
+            }
+        });
     }
 
-    public static JsonArray getTowns() {
-        try {
-            return (JsonArray) new JsonParser().parse(getURL("http://earthmc-api.herokuapp.com/towns/"));
-        } catch (APIException e) {
-            MsgUtils.sendDebugMessage(e.getMessage(), e);
-            return EarthMCEssentials.getTowns();
-        }        
+    public static CompletableFuture<Resident> getResident(String residentName) {
+        return CompletableFuture.supplyAsync(() -> {
+            try {
+                return new Resident((JsonObject) new JsonParser().parse(getURL("http://earthmc-api.herokuapp.com/residents/" + residentName)));
+            } catch (APIException e) {
+                MsgUtils.sendDebugMessage(e.getMessage(), e);
+                return new Resident(residentName);
+            }
+        });
     }
 
-    public static ServerData getServerData() {
-        try {
-            return new ServerData((JsonObject) new JsonParser().parse(getURL("http://earthmc-api.herokuapp.com/serverinfo/")));
-        } catch (APIException e) {
-            MsgUtils.sendDebugMessage(e.getMessage(), e);
-            return new ServerData();
-        }
+    public static CompletableFuture<JsonArray> getTowns() {
+        return CompletableFuture.supplyAsync(() -> {
+            try {
+                return (JsonArray) new JsonParser().parse(getURL("http://earthmc-api.herokuapp.com/towns/"));
+            } catch (APIException e) {
+                MsgUtils.sendDebugMessage(e.getMessage(), e);
+                return new JsonArray();
+            }
+        });
     }
 
-    public static JsonArray getNations() {
-        try {
-            return (JsonArray) new JsonParser().parse(getURL("http://earthmc-api.herokuapp.com/nations/"));
-        } catch (APIException e) {
-            MsgUtils.sendDebugMessage(e.getMessage(), e);
-            return EarthMCEssentials.getNations();
-        }
+    public static CompletableFuture<ServerData> getServerData() {
+        return CompletableFuture.supplyAsync(() -> {
+            try {
+                return new ServerData((JsonObject) new JsonParser().parse(getURL("http://earthmc-api.herokuapp.com/serverinfo/")));
+            } catch (APIException e) {
+                MsgUtils.sendDebugMessage(e.getMessage(), e);
+                return new ServerData();
+            }
+        });
+    }
+
+    public static CompletableFuture<JsonArray> getNations() {
+        return CompletableFuture.supplyAsync(() -> {
+            try {
+                return (JsonArray) new JsonParser().parse(getURL("http://earthmc-api.herokuapp.com/nations/"));
+            } catch (APIException e) {
+                MsgUtils.sendDebugMessage(e.getMessage(), e);
+                return new JsonArray();
+            }
+        });
     }
 
     private static String getURL(String urlString) throws APIException {
         try {
-            URL url = new URL(urlString);
-            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestMethod("GET");
-            connection.connect();
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create(urlString))
+                    .header("Accept", "application/json")
+                    .GET()
+                    .build();
 
-            if (connection.getResponseCode() == 200) {
-                StringBuilder inline = new StringBuilder();
-                final Scanner scanner = new Scanner(url.openStream());
+            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString(StandardCharsets.UTF_8));
 
-                while (scanner.hasNext()) 
-                    inline.append(scanner.nextLine());
+            if (response.statusCode() != 200)
+                throw new APIException("API returned response code " + response.statusCode() + " for URL: " + urlString);
 
-                scanner.close();
-                connection.disconnect();
-
-                return inline.toString();
-            } else
-                throw new APIException("API returned response code " + connection.getResponseCode() + " for URL: " + urlString);
+            return response.body();
         } catch (Exception e) {
             throw new APIException(e.getMessage());
         }
